--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "builds": [
-    { "src": "dist/**", "use": "@vercel/static" }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "routes": [
     { "src": "/(.*)", "dest": "/dist/$1" }
   ]
