--- a/package.json
+++ b/package.json
@@ -105,4 +105,10 @@
   },
   "overrides": {
     "drizzle-kit": {
-      "@
+      "@esbuild-kit/esm-loader": "npm:tsx@^4.20.4"
+    }
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8"
+  }
+}
