--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0",
     "cors": "^2.8.5",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -100,8 +101,7 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "typescript": "5.6.3"
   },
   "overrides": {
     "drizzle-kit": {
